--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.9.0",
+    "cookie-parser": "^1.3.3",
+    "morgan": "^1.3.2",
+    "static-favicon": "^2.0.0-alpha"
   }
 }
