--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "devDependencies": {
     "browserify": "~3.46.0",
     "connect-livereload": "~0.4.0",
-    "express": "~4.1.1",
-    "express-handlebars": "1.0.1",
     "gulp": "^3.8.6",
     "gulp-autoprefixer": "0.0.7",
     "gulp-browserify": "~0.5.0",
@@ -18,7 +16,6 @@
     "gulp-rimraf": "^0.1.0",
     "gulp-sass": "~0.7.1",
     "gulp-util": "~2.2.14",
-    "handlebars": "^2.0.0-alpha",
     "tiny-lr": "0.0.7"
   },
   "engines": {
@@ -28,6 +25,10 @@
     "body-parser": "^1.9.0",
     "cookie-parser": "^1.3.3",
     "morgan": "^1.3.2",
-    "static-favicon": "^2.0.0-alpha"
+    "static-favicon": "^2.0.0-alpha",
+    "handlebars": "^2.0.0-alpha",
+    "express": "~4.1.1",
+    "express-handlebars": "1.0.1"
+
   }
 }
