--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.9.0",
     "cookie-parser": "^1.3.3",
-    "morgan": "^1.3.2",
-    "static-favicon": "^2.0.0-alpha",
-    "handlebars": "^2.0.0-alpha",
     "express": "~4.1.1",
-    "express-handlebars": "1.0.1"
-
+    "express-handlebars": "1.0.1",
+    "handlebars": "^2.0.0-alpha",
+    "morgan": "^1.3.2",
+    "nodemailer": "^1.3.0",
+    "static-favicon": "^2.0.0-alpha"
   }
 }
