--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "handlebars": "^2.0.0-alpha",
     "morgan": "^1.3.2",
     "nodemailer": "^1.3.0",
+    "request": "^2.47.0",
     "static-favicon": "^2.0.0-alpha"
   }
 }
