Arvind : using hbsfy of browserify itself to precompile handlebars

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-rimraf": "^0.1.0",
     "gulp-sass": "~0.7.1",
     "gulp-util": "~2.2.14",
+    "hbsfy": "^2.2.1",
     "tiny-lr": "0.0.7"
   },
   "engines": {
