--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.9.0",
+    //"connect-redis": "^2.1.0",
     "cookie-parser": "^1.3.3",
     "express": "~4.1.1",
     "express-handlebars": "1.0.1",
+    "express-session": "^1.10.1",
     "handlebars": "^2.0.0-alpha",
     "morgan": "^1.3.2",
     "nodemailer": "^1.3.0",
