--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-handlebars": "1.0.1",
     "express-session": "^1.10.1",
     "handlebars": "^2.0.0-alpha",
+    "method-override": "^2.3.1",
     "morgan": "^1.3.2",
     "nodemailer": "^1.3.0",
     "request": "^2.47.0",
