--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "gulp-handlebars": "^2.2.0",
     "gulp-jshint": "~1.5.5",
     "gulp-livereload": "~1.3.1",
+    "gulp-rev": "^3.0.1",
+    "gulp-rev-replace": "^0.4.0",
     "gulp-rimraf": "^0.1.0",
     "gulp-sass": "~0.7.1",
     "gulp-util": "~2.2.14",
     "hbsfy": "^2.2.1",
-    "tiny-lr": "0.0.7"
+    "tiny-lr": "0.0.7",
+    "run-sequence": "^1.0.2"
   },
   "engines": {
     "node": ">=0.10.0"
