--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "method-override": "^2.3.1",
     "morgan": "^1.3.2",
     "nodemailer": "^1.3.0",
+    "nodemailer-smtp-transport": "^1.0.2",
     "request": "^2.47.0",
     "static-favicon": "^2.0.0-alpha"
   }
