Arvind : replacing gulp browserify with browserify itself

--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "personalised-messenger",
   "version": "0.0.1",
+  "browserify": {
+    "transform": [
+      "hbsfy"
+    ]
+  },
   "devDependencies": {
+    "browser-sync": "^2.7.4",
     "browserify": "~3.46.0",
     "connect-livereload": "~0.4.0",
     "gulp": "^3.8.6",
     "gulp-autoprefixer": "0.0.7",
-    "gulp-browserify": "~0.5.0",
-    "gulp-concat": "~2.2.0",
     "gulp-define-module": "^0.1.1",
     "gulp-embedlr": "~0.5.2",
     "gulp-handlebars": "^2.2.0",
@@ -19,8 +23,12 @@
     "gulp-sass": "~0.7.1",
     "gulp-util": "~2.2.14",
     "hbsfy": "^2.2.1",
+    "lodash": "^3.9.2",
+    "merge-stream": "^0.1.7",
+    "run-sequence": "^1.0.2",
     "tiny-lr": "0.0.7",
-    "run-sequence": "^1.0.2"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
