--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cookie-parser": "^1.3.3",
     "express": "~4.1.1",
     "express-handlebars": "1.0.1",
+    "gulp-sass": "^2.1.0",
     "handlebars": "^2.0.0-alpha",
     "method-override": "^2.3.1",
     "morgan": "^1.3.2",
