--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
   "name": "personalised-messenger",
   "version": "0.0.1",
-  "browserify": {
-    "transform": [
-      "hbsfy"
-    ]
+  "scripts": {
+    "browserify": "browserify -t hbsfy js/home.js -o public/bundle.js && browserify  -t hbsfy js/sending_via_gmail.js -o public/sending_via_gmail.js",
+    "sass": "node-sass sass/ -o public/",
+    "build-dev": "mkdir -p public/ && (node build/copy_dev_files.js & npm run browserify & npm run sass)",
+    "prestart-dev": "npm run build-dev",
+    "start-dev": "node app.js",
+    "clean-artifact": "node build/clean_artifact.js",
+    "copy-artifact-files": "node build/copy_files.js",
+    "uglify-js-files": "node build/uglify_js_files.js",
+    "precreate-artifact": "npm run clean-artifact & npm run build-dev",
+    "create-artifact": "npm run copy-artifact-files && npm run uglify-js-files && gulp revreplace"
   },
   "devDependencies": {
     "browser-sync": "^2.7.4",
     "browserify": "~3.46.0",
     "connect-livereload": "~0.4.0",
     "gulp": "^3.8.6",
-    "gulp-autoprefixer": "0.0.7",
-    "gulp-define-module": "^0.1.1",
-    "gulp-embedlr": "~0.5.2",
-    "gulp-handlebars": "^2.2.0",
-    "gulp-jshint": "~1.5.5",
-    "gulp-livereload": "~1.3.1",
     "gulp-rev": "^3.0.1",
     "gulp-rev-replace": "^0.4.0",
-    "gulp-rimraf": "^0.1.0",
-    "gulp-sass": "~0.7.1",
-    "gulp-util": "~2.2.14",
+    "gulp-rimraf": "^0.1.1",
     "hbsfy": "^2.2.1",
     "lodash": "^3.9.2",
     "merge-stream": "^0.1.7",
+    "node-sass": "^3.4.2",
     "run-sequence": "^1.0.2",
+    "shelljs": "^0.6.0",
     "tiny-lr": "0.0.7",
+    "uglify-js": "^2.6.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
   },
