--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "watchify": "^3.2.1"
   },
   "engines": {
-    "node": ">=0.12.2"
+    "node": "6.0.0"
   },
   "dependencies": {
     "async": "^0.9.0",
