Adding support to watch js and css files

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "browserify": "browserify -t hbsfy js/home.js -o public/bundle.js && browserify  -t hbsfy js/sending_via_gmail.js -o public/sending_via_gmail.js",
     "sass": "node-sass sass/ -o public/",
     "build-dev": "mkdir -p public/ && (node build/copy_dev_files.js & npm run browserify & npm run sass)",
-    "prestart-dev": "npm run build-dev",
-    "start-dev": "node app.js",
+    "prestart": "npm run build-dev",
+    "start": "node app.js",
+    "watch" : "cd build/ && node watcher.js",
     "clean-artifact": "node build/clean_artifact.js",
     "copy-artifact-files": "node build/copy_files.js",
     "uglify-js-files": "node build/uglify_js_files.js",
@@ -25,6 +26,7 @@
     "lodash": "^3.9.2",
     "merge-stream": "^0.1.7",
     "node-sass": "^3.4.2",
+    "node-watch": "^0.4.0",
     "run-sequence": "^1.0.2",
     "shelljs": "^0.6.0",
     "tiny-lr": "0.0.7",
