Arvind : renaming start to start-dev in package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "sass": "node-sass sass/ -o public/",
     "build-dev": "mkdir -p public/ && (node build/copy_dev_files.js & npm run browserify & npm run sass)",
     "prestart": "npm run build-dev",
-    "start": "node app.js",
+    "start-dev": "node app.js",
     "watch" : "cd build/ && node watcher.js",
     "clean-artifact": "node build/clean_artifact.js",
     "copy-artifact-files": "node build/copy_files.js",
