--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "personalised-messenger",
   "version": "0.0.1",
   "scripts": {
-    "browserify": "browserify -t hbsfy js/home.js -o public/bundle.js && browserify  -t hbsfy js/sending_via_gmail.js -o public/sending_via_gmail.js",
+    "compile-scripts": "webpack",
     "sass": "node-sass sass/ -o public/",
-    "build-dev": "mkdir -p public/ && (node build/copy_dev_files.js & npm run browserify & npm run sass)",
+    "build-dev": "mkdir -p public/ && (node build/copy_dev_files.js & npm run compile-scripts & npm run sass)",
     "prestart-dev": "npm run build-dev",
     "start-dev": "node app.js",
     "watch" : "cd build/ && node watcher.js",
@@ -16,12 +16,12 @@
   },
   "devDependencies": {
     "browser-sync": "^2.7.4",
-    "browserify": "~3.46.0",
     "connect-livereload": "~0.4.0",
     "gulp": "^3.8.6",
     "gulp-rev": "^3.0.1",
     "gulp-rev-replace": "^0.4.0",
     "gulp-rimraf": "^0.1.1",
+    "handlebars-template-loader": "^0.7.0",
     "hbsfy": "^2.2.1",
     "lodash": "^3.9.2",
     "merge-stream": "^0.1.7",
@@ -32,7 +32,8 @@
     "tiny-lr": "0.0.7",
     "uglify-js": "^2.6.2",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1"
+    "watchify": "^3.2.1",
+    "webpack": "^2.4.1"
   },
   "engines": {
     "node": "6.0.0"
