--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "sass": "node-sass sass/ -o public/",
     "setup-public-folder": "mkdir -p public/ && node build/copy_dev_files.js",
     "build-dev": "npm run setup-public-folder && npm run compile-scripts && npm run sass",
-    "prestart-dev": "npm run build-dev",
-    "start-dev": "node app.js",
+    "pre-dev": "npm run build-dev",
+    "dev": "node app.js & webpack --watch --config webpack/config/webpack.config.js ",
     "watch": "cd build/ && node watcher.js",
     "clean-artifact": "node build/clean_artifact.js",
     "copy-artifact-files": "node build/copy_files.js",
@@ -46,6 +46,7 @@
     "async": "^0.9.0",
     "body-parser": "^1.9.0",
     "cookie-parser": "^1.3.3",
+    "es6-promise": "^4.1.1",
     "express": "~4.1.1",
     "express-handlebars": "1.0.1",
     "gulp-sass": "^2.1.0",
