--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "sass": "node-sass sass/ -o public/",
     "setup-public-folder": "mkdir -p public/ && node build/copy_dev_files.js",
     "build-dev": "npm run setup-public-folder && npm run compile-scripts && npm run sass",
-    "pre-dev": "npm run build-dev",
+    "predev": "npm run build-dev",
     "dev": "node app.js & webpack --watch --config webpack/config/webpack.config.js ",
     "watch": "cd build/ && node watcher.js",
     "clean-artifact": "node build/clean_artifact.js",
@@ -40,7 +40,7 @@
     "webpack-md5-hash": "^0.0.5"
   },
   "engines": {
-    "node": "6.0.0"
+    "node": "10.0.0"
   },
   "dependencies": {
     "async": "^0.9.0",
