--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,17 +36,28 @@ jobs:
       # prepare artifact
       - run: ./prepare_snail_deploy.sh
 
-      - store_artifacts:
-          path: ../snail-deploy/
+      # - store_artifacts:
+      #     path: ../snail-deploy/
+
+  deploy:
+    docker:
+      - image: buildpack-deps:trusty
+    working_directory: ~/repo
+    steps:
+      - run:
+          name: Deploy Artifact to Heroku
+          command: |
+            cd ../snail-deploy/
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
 
 workflows:
   version: 2
   build-deploy:
     jobs:
       - build
-      # - deploy:
-      #     requires:
-      #       - build
-      #     filters:
-      #       branches:
-      #         only: master
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
