--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,10 @@ jobs:
           name: Deploy Artifact to Heroku
           command: |
             cd ../snail-deploy/
-            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+            git init
+            git add .
+            git commit -am  "updated deployment"
+            git push -f https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
       
 workflows:
   version: 2
