--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,8 @@ jobs:
             git init
             git add .
             git commit -am  "updated deployment"
+            git config --global user.email "$EMAIL"
+            git config --global user.name "$NAME"
             git push -f https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
       
 workflows:
