--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
             git add .
             git commit -am  "updated deployment"
             git config --global user.email "$EMAIL"
-            git config --global user.name "$NAME"
+            git config --global user.name "Arvind"
             git push -f https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
       
 workflows:
