--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,10 +44,10 @@ jobs:
           command: |
             cd ../snail-deploy/
             git init
+            git config user.email "$EMAIL"
+            git config user.name "Arvind"
             git add .
             git commit -am  "updated deployment"
-            git config --global user.email "$EMAIL"
-            git config --global user.name "Arvind"
             git push -f https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
       
 workflows:
