--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,8 @@ jobs:
             git add .
             git commit -am  "updated deployment"
             git push -f https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
-      
+          background: true
+          
 workflows:
   version: 2
   build-deploy:
