--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "snail-mail",
   "version": "0.0.1",
   "scripts": {
+    "start": "node server.js",
     "compile-scripts": "webpack --config webpack/config/webpack.config.js",
     "sass": "node-sass sass/ -o public/",
     "setup-public-folder": "mkdir -p public/ && node build/copy_dev_files.js",
