--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.0",
-    "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.7.4",
     "connect-livereload": "~0.4.0",
     "gulp": "^3.8.6",
@@ -43,7 +41,7 @@
     "webpack-md5-hash": "^0.0.5"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": "10.0.0"
   },
   "dependencies": {
     "async": "^0.9.0",
@@ -56,7 +54,6 @@
     "handlebars": "^2.0.0-alpha",
     "method-override": "^2.3.1",
     "morgan": "^1.3.2",
-    "neat-csv": "^3.0.0",
     "nodemailer": "^1.3.0",
     "nodemailer-smtp-transport": "^1.0.2",
     "request": "^2.47.0",
